# helloyocto

./: CMakeLists.txt
src/: test.cpp
